force-app/main/default/objects/Batalha__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Data de inicio da batalha</description>
    <inlineHelpText>Data de inicio da batalha</inlineHelpText>
    <label>Data de início</label>
    <type>DateTime</type>
</CustomField>