force-app/main/default/objects/Batalha__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição da batalha</description>
    <inlineHelpText>Descrição da batalha</inlineHelpText>
    <label>Descrição</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>