force-app/main/default/objects/Batalha__c/fields/StatusBatalha__c.field-meta.xml
<CustomField>
    <fullName>StatusBatalha__c</fullName>
    <description>Referente ao status atual da batalha</description>
    <inlineHelpText>Referente ao status atual da batalha</inlineHelpText>
    <label>Status da Batalha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciada</fullName>
                <default>true</default>
                <label>Não Iniciada</label>
            </value>
            <value>
                <fullName>Em curso</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>